--- a/components/Terminal/TerminalBlock.module.css
+++ b/components/Terminal/TerminalBlock.module.css
@@ -37,9 +37,13 @@
   margin-top: 20px;
 }
 
-@media (max-width: 640px) {
+@media (max-width: 900px) {
   .prompt {
-    font-size: 16px;
+    font-size: 14px;
+  }
+
+  .cmd {
+    word-break: break-all;
   }
 
   .block {
